* add basic test period package to the project * add test period interfaces to api * fix some small API design bugs
